<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



        <item android:title="Pages">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:title="@string/nav_home"
                    android:icon="@drawable/baseline_home_24"/>

                <item
                    android:id="@+id/nav_my_details"
                    android:title="@string/nav_my_details"
                    android:icon="@drawable/baseline_person_24"/>

                <item
                    android:id="@+id/nav_check_report"
                    android:title="@string/nav_check_report"
                    android:icon="@drawable/baseline_file_present_24"/>
                </group>
            </menu>
        </item>


        <item android:title="Others">
            <menu>

                <item
                    android:id="@+id/nav_change_password"
                    android:title="@string/nav_change_password"
                    android:icon="@drawable/baseline_lock_24"/>

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/nav_log_out"
                    android:icon="@drawable/baseline_logout_24"/>

            </menu>
        </item>
</menu>