<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_background"
    tools:context=".activities.LoginActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="12dp"
        app:contentPadding="12dp"
        android:layout_margin="6dp"
        android:backgroundTint="@color/background">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/rhythm"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_person_24"
                android:hint="@string/login_username"
                app:startIconTint="@color/white"
                app:boxBackgroundColor="@color/input_background"
                android:textColorHint="@color/white"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_lock_24"
                android:hint="@string/login_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:startIconTint="@color/white"
                app:boxBackgroundColor="@color/input_background"
                android:textColorHint="@color/white"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/login_remember_me"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_sign_in"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                app:cornerRadius="12dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="12dp"
                android:text="@string/login_signin"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>